<resources>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>


    <string name="app_name">HealtyLicious</string>
    <string name="ic_healtylicious">ic_healtylicious</string>
    <string name="healtylicious">HealtyLicious</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="title">Everything you need for a healthier life</string>
    <string name="subtitle">Track your daily calories and more with Healthylicious. Monitor your diet and stay fit, all in one app.</string>
    <string name="title_log">Please sign in to continue.</string>
    <string name="ic_back">ic_back</string>
    <string name="don_t_have_an_account">Don’t Have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_with_google">Sign up With Google</string>
    <string name="email">Email</string>
    <string name="or_login_with">Or login with</string>
    <string name="ic_google">ic_google</string>
    <string name="sub_title_signup">Enter your personal information</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="forgout_password">Forgout Password?</string>
    <string name="title_forgot">Don’t worry!!, Plase enter the email addre linked with your account.</string>
    <string name="send_email">Send Email</string>
    <string name="home">Home</string>
    <string name="recent">Recent</string>
    <string name="add">Add</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="title_activity_buttomnavigation">buttomnavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pantry">Pantry</string>
    <string name="favorite">Favorite</string>
    <string name="menu">Browse Recipes</string>
    <string name="shop">Shop</string>
    <string name="sayur_sayuran">Sayur-Sayuran</string>
    <string name="_0_100_bahan_bahan">0/100 Bahan-Bahan</string>
    <string name="anda_kekurangan_bahan">Anda kekurangan bahan</string>
    <string name="image">image</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="welcome_new_user">Welcome to Healthylicious!</string>
    <string name="welcome_desc_extra">Please provide the informations below so we can help you get more healthy!</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="height">Height</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="weight">Weight</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="submit">Submit</string>
    <string name="healthylicious_slogan">Healthylicious: Healthy and Delicious!</string>
    <string name="healthylicious_desc">This app will continue to help you get healthier no matter the circumstances!</string>
    <string name="my_basket">My Basket</string>
    <string name="see_all">see all</string>
    <string name="favourite">Favourite</string>
    <string name="my_profile">My Profile</string>
    <string name="empty_favourite">You do not have a favourite recipe yet.</string>
    <string name="empty_basket">Your basket is empty.</string>
    <string name="chicken_strips">Chicken Strips</string>
    <string name="get_recipes">Get Recipes</string>
    <string name="_100_ingredients_available">100 ingredients available</string>
    <string name="input_search_above">Input search above.</string>


    <string-array name="menu_data_title">
        <item>Chicken Strips</item>
        <item>Chicken Strips</item>
        <item>Chicken Strips</item>
        <item>Chicken Strips</item>
        <item>Chicken Strips</item>
        <item>Chicken Strips</item>
        <item>Chicken Strips</item>
    </string-array>

    <integer-array name="menu_data_photo">
        <item>@drawable/chicken_strips</item>
        <item>@drawable/chicken_strips</item>
        <item>@drawable/chicken_strips</item>
        <item>@drawable/chicken_strips</item>
        <item>@drawable/chicken_strips</item>
        <item>@drawable/chicken_strips</item>
        <item>@drawable/chicken_strips</item>
    </integer-array>

    <string-array name="menu_data_title2">
        <item>Burger</item>
        <item>Burger</item>
        <item>Burger</item>
        <item>Burger</item>
        <item>Burger</item>
        <item>Burger</item>
        <item>Burger</item>
    </string-array>

    <integer-array name="menu_data_photo2">
        <item>@drawable/burger</item>
        <item>@drawable/burger</item>
        <item>@drawable/burger</item>
        <item>@drawable/burger</item>
        <item>@drawable/burger</item>
        <item>@drawable/burger</item>
        <item>@drawable/burger</item>
    </integer-array>

    <string-array name="menu_data_title3">
        <item>Ice Cream</item>
        <item>Ice Cream</item>
        <item>Ice Cream</item>
        <item>Ice Cream</item>
        <item>Ice Cream</item>
        <item>Ice Cream</item>
        <item>Ice Cream</item>
    </string-array>

    <integer-array name="menu_data_photo3">
        <item>@drawable/ice_cream</item>
        <item>@drawable/ice_cream</item>
        <item>@drawable/ice_cream</item>
        <item>@drawable/ice_cream</item>
        <item>@drawable/ice_cream</item>
        <item>@drawable/ice_cream</item>
        <item>@drawable/ice_cream</item>
    </integer-array>

</resources>