<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <ScrollView
        android:id="@+id/sc_view_sign_up"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:fillViewport="true"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        android:paddingBottom="24dp"
        tools:ignore="MissingConstraints,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="9dp"
                android:background="@drawable/back"
                android:contentDescription="@string/ic_back"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:scaleType="fitXY"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/img_view_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/ic_healtylicious"
                android:src="@drawable/ic_healtylicious"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/txt_view_register"
                style="@style/Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/signUp"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_view_sub_title_sign_up"
                style="@style/Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/sub_title_signup"
                android:textColor="@color/lightGray"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />


            <TextView
                android:id="@+id/txt_view_email_label"
                style="@style/Medium"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginBottom="12dp"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                app:helperTextTextColor="@color/red"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    android:textSize="15sp"
                    android:autofillHints="email" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/txt_view_password_label"
                style="@style/Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:helperTextTextColor="@color/red"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/edt_text_password"
                    style="@style/Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="12dp"
                    android:textSize="15sp"
                    android:autofillHints="password" />

            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/txt_view_confirm_password_label"
                style="@style/Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:text="@string/confirm_password"
                android:textColor="#000000"
                android:textSize="20sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_confirm_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:helperTextTextColor="@color/red"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/edit_text_confirm_password"
                    style="@style/Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/enter_your_confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="12dp"
                    android:textSize="15sp"
                    android:autofillHints="password" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_register"
                style="@style/Regular"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_btn_primary"
                android:gravity="center"
                android:text="@string/signUp"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextContrastCheck" />


            <LinearLayout
                android:id="@+id/linearLayout_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>

