<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.extrainfo.ExtraInfoActivity">


    <ScrollView
        android:id="@+id/view_extra"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF"
        android:fillViewport="true"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="24dp"
        tools:ignore="MissingConstraints,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/extra_image"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:src="@drawable/girl_eating_salad"/>

            <TextView
                android:id="@+id/text_view_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                style="@style/Bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/welcome_new_user"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_view_title_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                style="@style/Regular"
                android:text="@string/welcome_desc_extra"
                android:textColor="@color/lightGray"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/text_view_username_label"
                style="@style/Medium"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/edit_text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    style="@style/Regular"
                    android:hint="@string/enter_your_username"
                    android:inputType="text"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_view_age_label"
                style="@style/Medium"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="Age"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/edit_text_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    style="@style/Regular"
                    android:hint="@string/enter_your_age"
                    android:inputType="number"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_view_weight_label"
                style="@style/Medium"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/weight"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/edit_text_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    style="@style/Regular"
                    android:hint="@string/enter_your_weight"
                    android:inputType="numberDecimal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_view_height_label"
                style="@style/Medium"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/height"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/edit_text_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    style="@style/Regular"
                    android:hint="@string/enter_your_height"
                    android:inputType="numberDecimal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_btn_primary"
                style="@style/Regular"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextContrastCheck" />



        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>